--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/material": "^6.3.1",
+    "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "html-webpack-plugin": "^5.5.0",
     "lucide-react": "^0.469.0",
