--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.469.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1"
   },
