--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,11 +14,12 @@
     "cra-template": "1.2.0",
     "html-webpack-plugin": "^5.5.0",
     "lucide-react": "^0.469.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.28.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "react-use": "^17.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -53,9 +54,5 @@
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17",
     "web-vitals": "^4.2.4"
-  },
-  "peerDependencies": {
-    "react": "^18",
-    "react-dom": "^18"
   }
 }
