--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "@headlessui/react": "^2.2.0",
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
+    "@mui/icons-material": "^6.4.3",
     "@mui/material": "^6.3.1",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
