--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,12 +15,14 @@
     "cra-template": "1.2.0",
     "html-webpack-plugin": "^5.5.0",
     "lucide-react": "^0.469.0",
+    "motion": "^12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
-    "react-use": "^17.6.0"
+    "react-use": "^17.6.0",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
