--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,8 @@
     "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^2.1.10",
     "@mui/icons-material": "^6.4.3",
-    "@mui/material": "^6.3.1",
+    "@mui/material": "^6.4.3",
+    "@mui/system": "^6.4.3",
     "axios": "^1.7.9",
     "cra-template": "1.2.0",
     "html-webpack-plugin": "^5.5.0",
