--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "lucide-react": "^0.469.0",
     "motion": "^12.3.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
