--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,13 @@
     "@mui/material": "^6.4.3",
     "@mui/system": "^6.4.3",
     "axios": "^1.7.9",
+    "canvas": "^2.7.0",
     "cra-template": "1.2.0",
     "html-webpack-plugin": "^5.5.0",
     "lucide-react": "^0.469.0",
     "motion": "^12.3.1",
+    "promptpay-qr": "0.4.4",
+    "qrcode": "1.4.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "18.2.0",
@@ -25,10 +28,8 @@
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "react-use": "^17.6.0",
-    "tailwind-scrollbar-hide": "^2.0.0",
-    "canvas": "^2.7.0",
-    "promptpay-qr": "0.4.4",
-    "qrcode": "1.4.4"
+    "sonner": "^1.7.4",
+    "tailwind-scrollbar-hide": "^2.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
