--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.5.1",
     "react-icons": "^5.4.0",
+    "react-range": "^1.10.0",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.28.1",
     "react-scripts": "^5.0.1",
     "react-use": "^17.6.0",
